Fix Video size overflow

--- a/assets/styles/drumloops.css
+++ b/assets/styles/drumloops.css
@@ -1,6 +1,5 @@
 html{
     min-width: 980px;
-    min-height: 889px;
     height: 100%;
 
 }
